--- a/mini school/courseitem.html
+++ b/mini school/courseitem.html
@@ -93,5 +93,45 @@
                                                         <p>QUESTION</p> </a>
                                                     </div>
     </div>
+        
+              <footer id="footer1" class="py-1 bg-dark text-white-50">
+                    <div class="container text-left">
+                      <div class="row">
+                          <div class="col-sm-4">
+                              <p>About Us</p>
+                              <p>Company that use our service</p>
+                              <p>Resources and Links</p>
+                              <p>News</p>
+                          </div>
+
+                          <div class="col-sm-4">
+                                <p>Contact Us</p>
+                                <p>+234 000 987 654</p>
+                                <p>aeolusteachme@gmail.com</p>
+                                <p>HNG Towers</p>
+                            </div>
+
+                            <div class="col-sm-4">
+                                    <p>Terms and Conditions</p>
+                                    <p>Refund Policy</p>
+                                    <p>Privacy Policy</p>
+                                    <p>Follow Us</p>
+                                </div>
+      
+                      </div>
+                    </div> 
+                    <footer id="" class="py-1 bg-primary text-white-50">
+                            <div class="container text-center">
+                              <div class="row">
+                                  <div class="col-sm-12">
+                                      <p> <i>All right reserve powered by AEOLUS!</i></p>
+                                    </div>
+                                    <div class="col-sm-6">
+                                            <!-- <p>About Us</p> -->
+                                          </div>
+                              </div>
+                            </div>
+                          </footer>
+                   </footer>
 </body>
 </html>
